src/components/NoiseControls/NoiseControls.css
.noise-controls {
    position: fixed;
    width: 300px;
    max-height: 100vh;
    overflow-y: auto;
    z-index: 1;
    padding: 1rem 1.5rem;
    padding-bottom: 3rem;
    background-color: #16161F;
    border-right: 3px solid #16161F;
}

.noise-controls-label {
    color: rgba(255, 255, 255, 0.85);
    margin-top: 16px;
}

.noise-controls-label.is-disabled {
    color: rgba(255, 255, 255, 0.25);
}

.noise-controls-section {
    color: rgb(239, 251, 255);
    font-size: .75rem;
    font-weight: 600;
    letter-spacing: 0.05em;
    text-transform: uppercase;
    margin: 24px 0 8px;
    padding-top: 16px;
    padding-bottom: 8px;
    border-top: 1px solid rgba(255, 255, 255, 0.08);
    text-align: center;
  }

.noise-controls-section:first-child {
    margin-top: 0;
    padding-top: 0;
    border-top: none;
}
  
.custom-scrollbar::-webkit-scrollbar {
    width: 4px;
    height: 4px;
}

.custom-scrollbar::-webkit-scrollbar-track {
    background: #16161F;
    width: 10px;
}
  
.custom-scrollbar::-webkit-scrollbar-thumb {
    background: #4a5568;
    border-radius: 1px;
}
  
.custom-scrollbar::-webkit-scrollbar-thumb:hover {
    background: #2d3748;
}
  
.custom-scrollbar::-webkit-scrollbar-button {
    display: none !important;
    width: 0px !important;
    height: 0px !important;
}
    

